add a short header

--- a/translation.ipynb
+++ b/translation.ipynb
@@ -8,6 +8,15 @@
    },
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Before running the file, config the environment by adding the OpenAI API key:\n",
+    "\n",
+    "\n",
+    "echo \"export OPENAI_API_KEY='yourkey'\" >> ~/.zshrc\n",
+    "source ~/.zshrc\n",
+    "echo $OPENAI_API_KEY # Test to see if it is added\n",
+    "\"\"\"\n",
+    "\n",
     "import openai\n",
     "import re"
    ]
