small updates from Humphrey

--- a/translation.ipynb
+++ b/translation.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 15\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Set the API key directly in your script using the environment variable\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m openai\u001b[38;5;241m.\u001b[39mapi_key \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m# Example API call to verify that everything is set up correctly\u001b[39;00m\n\u001b[1;32m     18\u001b[0m response \u001b[38;5;241m=\u001b[39m openai\u001b[38;5;241m.\u001b[39mCompletion\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[1;32m     19\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext-davinci-003\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     20\u001b[0m     prompt\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTranslate this text to French.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     21\u001b[0m     max_tokens\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m\n\u001b[1;32m     22\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Before running the file, config the environment by adding the OpenAI API key:\n",
@@ -23,16 +35,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SyncCursorPage[Assistant](data=[Assistant(id='asst_qKEHiaBYlDSpTpNKCVjhVllL', created_at=1721564291, description=None, instructions='You are an assistant working on the QuantEcon translation project and are asked to improve the translation to make it more natural.\\n\\nYour task is to read through a translated Chinese lecture and modify it to make it closer to everyday language while maintaining academic rigidity.\\n', metadata={}, model='gpt-4o', name='QuantEcon Critique Bot', object='assistant', tools=[], response_format='auto', temperature=1.0, tool_resources=ToolResources(code_interpreter=None, file_search=None), top_p=1.0), Assistant(id='asst_zjzyGwEZ1rVuJYWNQk6nzQTA', created_at=1721563447, description=None, instructions='You are working on a translation project migrating QuantEcon lectures to Chinese. Your task is to maintain the myst markdown syntax and headers while translating the main text and code comment to simplified Chinese. \\nNote that:\\n\\n1. Make the translation closer to everyday language while maintaining academic rigidity.\\n\\n2. Do not translate the package names for python (like \"Anaconda\")\\n\\n3. Keep headers like:\\n\\n---\\njupytext:\\n  text_representation:\\n    extension: .md\\n    format_name: myst\\n    format_version: 0.13\\n    jupytext_version: 1.14.5\\nkernelspec:\\n  display_name: Python 3 (ipykernel)\\n  language: python\\n  name: python3\\n---\\n\\n4. Do not Translate: \"Image input capabilities: Enabled\"', metadata={}, model='gpt-4o', name='QuantEcon Bot', object='assistant', tools=[], response_format='auto', temperature=1.0, tool_resources=ToolResources(code_interpreter=None, file_search=None), top_p=1.0)], object='list', first_id='asst_qKEHiaBYlDSpTpNKCVjhVllL', last_id='asst_zjzyGwEZ1rVuJYWNQk6nzQTA', has_more=False)\n"
+     "ename": "OpenAIError",
+     "evalue": "The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOpenAIError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m client \u001b[38;5;241m=\u001b[39m \u001b[43mopenai\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mOpenAI\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(openai\u001b[38;5;241m.\u001b[39mbeta\u001b[38;5;241m.\u001b[39massistants\u001b[38;5;241m.\u001b[39mlist())\n\u001b[1;32m      3\u001b[0m assistant_cn_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124masst_zjzyGwEZ1rVuJYWNQk6nzQTA\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/envs/quantecon/lib/python3.8/site-packages/openai/_client.py:105\u001b[0m, in \u001b[0;36mOpenAI.__init__\u001b[0;34m(self, api_key, organization, project, base_url, timeout, max_retries, default_headers, default_query, http_client, _strict_response_validation)\u001b[0m\n\u001b[1;32m    103\u001b[0m     api_key \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39menviron\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOPENAI_API_KEY\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    104\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m api_key \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 105\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m OpenAIError(\n\u001b[1;32m    106\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    107\u001b[0m     )\n\u001b[1;32m    108\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mapi_key \u001b[38;5;241m=\u001b[39m api_key\n\u001b[1;32m    110\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m organization \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[0;31mOpenAIError\u001b[0m: The api_key client option must be set either by passing api_key to the client or by setting the OPENAI_API_KEY environment variable"
      ]
     }
    ],
@@ -142,6 +159,7 @@
     "\n",
     "translated_content = \"\"\n",
     "\n",
+    "header = ''\n",
     "for chunk in chunks:\n",
     "    # Create and poll the run for each chunk\n",
     "    run = client.beta.threads.runs.create_and_poll(\n",
@@ -154,10 +172,11 @@
     "        messages = client.beta.threads.messages.list(\n",
     "            thread_id=thread.id\n",
     "        )\n",
-    "        translated_content += '\\n\\n' + messages.data[0].content[0].text.value\n",
+    "        translated_content += header + messages.data[0].content[0].text.value\n",
     "    else:\n",
     "        print(f\"Translation failed for chunk: {chunk[:50]}... Status: {run.status}\")\n",
-    "        continue"
+    "        continue\n",
+    "    header = '\\n'"
    ]
   },
   {
@@ -214,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
