update graphviz figure

--- a/lectures/_static/lecture_specific/lake_model/figures.ipynb
+++ b/lectures/_static/lecture_specific/lake_model/figures.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "92a57207-4d79-4d7b-98c2-aea1a1e35f57",
    "metadata": {},
    "outputs": [
@@ -60,9 +60,9 @@
     "\n",
     "# Add nodes\n",
     "G.attr('node', shape='circle')\n",
-    "G.node('1', 'New entrants', color='blue')\n",
-    "G.node('2', 'Unemployed')\n",
-    "G.node('3', 'Employed')\n",
+    "G.node('1', '新工人', color='blue')\n",
+    "G.node('2', '失业工人')\n",
+    "G.node('3', '就业工人')\n",
     "\n",
     "# Add edges\n",
     "G.edge('1', '2', label='b')\n",
