--- a/lectures/_static/lecture_specific/networks/figures.ipynb
+++ b/lectures/_static/lecture_specific/networks/figures.ipynb
@@ -109,18 +109,18 @@
    "source": [
     "dot = Digraph(format='png',engine = \"neato\")\n",
     "dot.attr(rankdir='LR')\n",
-    "dot.node(\"poor\", pos='0,0!')\n",
-    "dot.node(\"middle class\", pos='2,1!')\n",
-    "dot.node(\"rich\", pos='4,0!')\n",
+    "dot.node(\"贫困\", pos='0,0!')\n",
+    "dot.node(\"中产\", pos='2,1!')\n",
+    "dot.node(\"富裕\", pos='4,0!')\n",
     "\n",
-    "dot.edge(\"poor\", \"poor\")\n",
-    "dot.edge(\"poor\", \"middle class\")\n",
-    "dot.edge(\"middle class\", \"poor\")\n",
-    "dot.edge(\"middle class\", \"middle class\")\n",
-    "dot.edge(\"middle class\", \"rich\")\n",
-    "dot.edge(\"rich\", \"poor\")\n",
-    "dot.edge(\"rich\", \"middle class\")\n",
-    "dot.edge(\"rich\", \"rich\")\n",
+    "dot.edge(\"贫困\", \"贫困\")\n",
+    "dot.edge(\"贫困\", \"中产\")\n",
+    "dot.edge(\"中产\", \"贫困\")\n",
+    "dot.edge(\"中产\", \"中产\")\n",
+    "dot.edge(\"中产\", \"富裕\")\n",
+    "dot.edge(\"富裕\", \"贫困\")\n",
+    "dot.edge(\"富裕\", \"中产\")\n",
+    "dot.edge(\"富裕\", \"富裕\")\n",
     "\n",
     "dot\n",
     "dot.render(filename='poverty_trap_1')"
@@ -146,17 +146,17 @@
    "source": [
     "dot = Digraph(format='png',engine=\"neato\")\n",
     "dot.attr(rankdir='LR')\n",
-    "dot.node(\"poor\", pos='0,0!')\n",
-    "dot.node(\"middle class\", pos='2,1!')\n",
-    "dot.node(\"rich\", pos='4,0!')\n",
+    "dot.node(\"贫困\", pos='0,0!')\n",
+    "dot.node(\"中产\", pos='2,1!')\n",
+    "dot.node(\"富裕\", pos='4,0!')\n",
     "\n",
-    "dot.edge(\"poor\", \"poor\")\n",
-    "dot.edge(\"middle class\", \"poor\")\n",
-    "dot.edge(\"middle class\", \"middle class\")\n",
-    "dot.edge(\"middle class\", \"rich\")\n",
-    "dot.edge(\"rich\", \"poor\")\n",
-    "dot.edge(\"rich\", \"middle class\")\n",
-    "dot.edge(\"rich\", \"rich\")\n",
+    "dot.edge(\"贫困\", \"贫困\")\n",
+    "dot.edge(\"中产\", \"贫困\")\n",
+    "dot.edge(\"中产\", \"中产\")\n",
+    "dot.edge(\"中产\", \"富裕\")\n",
+    "dot.edge(\"富裕\", \"贫困\")\n",
+    "dot.edge(\"富裕\", \"中产\")\n",
+    "dot.edge(\"富裕\", \"富裕\")\n",
     "\n",
     "dot\n",
     "dot.render(filename='poverty_trap_2')"
@@ -191,18 +191,18 @@
     "dot = Digraph(format='png')\n",
     "\n",
     "dot.attr(rankdir='LR')\n",
-    "dot.node(\"poor\")\n",
-    "dot.node(\"middle class\")\n",
-    "dot.node(\"rich\")\n",
+    "dot.node(\"贫困\")\n",
+    "dot.node(\"中产\")\n",
+    "dot.node(\"富裕\")\n",
     "\n",
-    "dot.edge(\"poor\", \"poor\", label='0.9')\n",
-    "dot.edge(\"poor\", \"middle class\", label='0.1')\n",
-    "dot.edge(\"middle class\", \"poor\", label='0.4')\n",
-    "dot.edge(\"middle class\", \"middle class\", label='0.4')\n",
-    "dot.edge(\"middle class\", \"rich\", label='0.2')\n",
-    "dot.edge(\"rich\", \"poor\", label='0.1')\n",
-    "dot.edge(\"rich\", \"middle class\", label='0.1')\n",
-    "dot.edge(\"rich\", \"rich\", label='0.8')\n",
+    "dot.edge(\"贫困\", \"贫困\", label='0.9')\n",
+    "dot.edge(\"贫困\", \"中产\", label='0.1')\n",
+    "dot.edge(\"中产\", \"贫困\", label='0.4')\n",
+    "dot.edge(\"中产\", \"中产\", label='0.4')\n",
+    "dot.edge(\"中产\", \"富裕\", label='0.2')\n",
+    "dot.edge(\"富裕\", \"贫困\", label='0.1')\n",
+    "dot.edge(\"富裕\", \"中产\", label='0.1')\n",
+    "dot.edge(\"富裕\", \"富裕\", label='0.8')\n",
     "\n",
     "dot\n",
     "dot.render(filename='weighted')"
