--- a/lectures/_static/lecture_specific/markov_chains_I/figures.ipynb
+++ b/lectures/_static/lecture_specific/markov_chains_I/figures.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: graphviz in /Users/mmcky/anaconda3/envs/quantecon/lib/python3.11/site-packages (0.20.3)\n"
+      "Requirement already satisfied: graphviz in /home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages (0.20.3)\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "quantecon",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
