--- a/lectures/_static/lecture_specific/markov_chains_II/figures.ipynb
+++ b/lectures/_static/lecture_specific/markov_chains_II/figures.ipynb
@@ -68,18 +68,18 @@
    "source": [
     "dot = Digraph(format='png')\n",
     "dot.attr(rankdir='LR')\n",
-    "dot.node(\"poor\")\n",
-    "dot.node(\"middle class\")\n",
-    "dot.node(\"rich\")\n",
+    "dot.node(\"贫穷\")\n",
+    "dot.node(\"中产\")\n",
+    "dot.node(\"富裕\")\n",
     "\n",
-    "dot.edge(\"poor\", \"poor\", label=\"0.9\")\n",
-    "dot.edge(\"poor\", \"middle class\", label=\"0.1\")\n",
-    "dot.edge(\"middle class\", \"poor\", label=\"0.4\")\n",
-    "dot.edge(\"middle class\", \"middle class\", label=\"0.4\")\n",
-    "dot.edge(\"middle class\", \"rich\", label=\"0.2\")\n",
-    "dot.edge(\"rich\", \"poor\", label=\"0.1\")\n",
-    "dot.edge(\"rich\", \"middle class\", label=\"0.1\")\n",
-    "dot.edge(\"rich\", \"rich\", label=\"0.8\")\n",
+    "dot.edge(\"贫穷\", \"贫穷\", label=\"0.9\")\n",
+    "dot.edge(\"贫穷\", \"中产\", label=\"0.1\")\n",
+    "dot.edge(\"中产\", \"贫穷\", label=\"0.4\")\n",
+    "dot.edge(\"中产\", \"中产\", label=\"0.4\")\n",
+    "dot.edge(\"中产\", \"富裕\", label=\"0.2\")\n",
+    "dot.edge(\"富裕\", \"贫穷\", label=\"0.1\")\n",
+    "dot.edge(\"富裕\", \"中产\", label=\"0.1\")\n",
+    "dot.edge(\"富裕\", \"富裕\", label=\"0.8\")\n",
     "\n",
     "dot\n",
     "dot.render(filename='Irre_1')"
@@ -105,16 +105,16 @@
    "source": [
     "dot = Digraph(format='png')\n",
     "dot.attr(rankdir='LR')\n",
-    "dot.node(\"poor\")\n",
-    "dot.node(\"middle class\")\n",
-    "dot.node(\"rich\")\n",
+    "dot.node(\"贫穷\")\n",
+    "dot.node(\"中产\")\n",
+    "dot.node(\"富裕\")\n",
     "\n",
-    "dot.edge(\"poor\", \"poor\", label=\"1.0\")\n",
-    "dot.edge(\"middle class\", \"poor\", label=\"0.1\")\n",
-    "dot.edge(\"middle class\", \"middle class\", label=\"0.8\")\n",
-    "dot.edge(\"middle class\", \"rich\", label=\"0.1\")\n",
-    "dot.edge(\"rich\", \"middle class\", label=\"0.2\")\n",
-    "dot.edge(\"rich\", \"rich\", label=\"0.8\")\n",
+    "dot.edge(\"贫穷\", \"贫穷\", label=\"1.0\")\n",
+    "dot.edge(\"中产\", \"贫穷\", label=\"0.1\")\n",
+    "dot.edge(\"中产\", \"中产\", label=\"0.8\")\n",
+    "dot.edge(\"中产\", \"富裕\", label=\"0.1\")\n",
+    "dot.edge(\"富裕\", \"中产\", label=\"0.2\")\n",
+    "dot.edge(\"富裕\", \"富裕\", label=\"0.8\")\n",
     "\n",
     "dot\n",
     "dot.render(filename='Irre_2')"
