--- a/lectures/_static/lecture_specific/markov_chains_I/figures.ipynb
+++ b/lectures/_static/lecture_specific/markov_chains_I/figures.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: graphviz in /Users/mmcky/anaconda3/envs/quantecon/lib/python3.11/site-packages (0.20.3)\n"
+      "Requirement already satisfied: graphviz in /home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages (0.20.3)\n"
      ]
     }
    ],
@@ -114,21 +114,21 @@
    "source": [
     "dot = Digraph(format='png')\n",
     "dot.attr(rankdir='LR')\n",
-    "dot.node(\"Growth\")\n",
-    "dot.node(\"Stagnation\")\n",
-    "dot.node(\"Collapse\")\n",
+    "dot.node(\"增长\")\n",
+    "dot.node(\"停滞\")\n",
+    "dot.node(\"崩溃\")\n",
     "\n",
-    "dot.edge(\"Growth\", \"Growth\", label=\"0.68\")\n",
-    "dot.edge(\"Growth\", \"Stagnation\", label=\"0.12\")\n",
-    "dot.edge(\"Growth\", \"Collapse\", label=\"0.20\")\n",
+    "dot.edge(\"增长\", \"增长\", label=\"0.68\")\n",
+    "dot.edge(\"增长\", \"停滞\", label=\"0.12\")\n",
+    "dot.edge(\"增长\", \"崩溃\", label=\"0.20\")\n",
     "\n",
-    "dot.edge(\"Stagnation\", \"Stagnation\", label=\"0.24\")\n",
-    "dot.edge(\"Stagnation\", \"Growth\", label=\"0.50\")\n",
-    "dot.edge(\"Stagnation\", \"Collapse\", label=\"0.26\")\n",
+    "dot.edge(\"停滞\", \"停滞\", label=\"0.24\")\n",
+    "dot.edge(\"停滞\", \"增长\", label=\"0.50\")\n",
+    "dot.edge(\"停滞\", \"崩溃\", label=\"0.26\")\n",
     "\n",
-    "dot.edge(\"Collapse\", \"Collapse\", label=\"0.46\")\n",
-    "dot.edge(\"Collapse\", \"Stagnation\", label=\"0.18\")\n",
-    "dot.edge(\"Collapse\", \"Growth\", label=\"0.36\")\n",
+    "dot.edge(\"崩溃\", \"崩溃\", label=\"0.46\")\n",
+    "dot.edge(\"崩溃\", \"停滞\", label=\"0.18\")\n",
+    "dot.edge(\"崩溃\", \"增长\", label=\"0.36\")\n",
     "\n",
     "dot\n",
     "\n",
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "quantecon",
    "language": "python",
    "name": "python3"
   },
@@ -160,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
